--- a/project4/style.css
+++ b/project4/style.css
@@ -2,6 +2,7 @@
     border: 3px solid black;
     position: absolute;
     width: 500px;
+    height: 630px;
     background: black;
     top: 50%;
     left: 50%;
